Fix column resizing with collapsed columns

--- a/main/webapp/modules/core/styles/views/data-table-view.css
+++ b/main/webapp/modules/core/styles/views/data-table-view.css
@@ -210,9 +210,9 @@ table.data-table td.column-header, table.data-table th.column-header {
   position: initial;
 }
 
-th.resized-column .column-header-name {
+/* th.resized-column .column-header-name {
   position: absolute;
-}
+} */
 
 .column-header-menu {
   display: inline-block;
